fixed footer image from overflowing on mobile view / added padding for footer container

--- a/style.css
+++ b/style.css
@@ -223,6 +223,8 @@ header::before {
 /* Footer */
 .contact-container {
   text-align: left;
+  padding: 1rem;
+  width: 100vw;
 }
 
 .contact-container h3 {
@@ -262,17 +264,23 @@ header::before {
 }
 
 #footer-image {
-  padding: calc(100% - 1.5rem);
+  /* padding: calc(100% - 1.5rem);
   margin-bottom: 0;
   background-image: url("images/portrait-footer.webp");
-  max-width: 100%;
+  background-size: cover;
+  background-position: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+
+   width: 100vw;
+  aspect-ratio: 3 / 4;
+  margin-bottom: 0;
+  background-image: url("images/portrait-footer.webp");
   background-size: cover;
   background-position: center;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .attribution {
-
   text-align: center;
   width: 100%;
   padding-bottom: 0.3rem;
